--- a/src/public/css/userHeader.css
+++ b/src/public/css/userHeader.css
@@ -22,12 +22,12 @@ header {
     position: absolute;
     top: 70px;
     width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     #search-input {
       height: 50px;
       width: 100%;
       border-style: none;
-      resize: vertical;
     }
 
     input {
