--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="../../img/4.jpg" />
   <link rel="stylesheet" href="/css/userAdvertise.css">
+  <link rel="stylesheet" href="/css/userAllBrands.css">
   <link rel="stylesheet" href="/css/userAllProducts.css">
   <link rel="stylesheet" href="/css/userAllOrders.css">
   <link rel="stylesheet" href="/css/userFooter.css">
@@ -27,7 +28,7 @@
     {{> userHeader}}
   </header>
   
-  <main style="margin-top: 70px">
+  <main style="margin-top: 70px; margin-bottom: 50px">
     {{{body}}}
   </main>
 
