--- a/src/public/css/userAllProducts.css
+++ b/src/public/css/userAllProducts.css
@@ -126,7 +126,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
     text-decoration: none;
     width: 20px;
     color: black;
