--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -65,12 +65,17 @@
     <a href="/all-products/all-brands" class="main-title"><b>THƯƠNG HIỆU NỔI BẬT</b></a>
   </div>
 
-  <div class="products">
-    {{#each allProduct}}
-    <a href="/all-products/all-brands/{{this.brand}}">
-      {{this.brand}}
-    </a>
-    {{/each}}
+  <div class="brands">
+    <div class="inner">
+      {{#each allBrands}}
+      <div class="brand">
+        <a href="/all-products/all-brands/{{this}}">
+          {{this}}
+        </a>
+      </div>
+      {{/each}}
+    </div>
+    <div class="fade"></div>
   </div>
 </div>
 
