--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/css/userOrder.css">
   <link rel="stylesheet" href="/css/userOrdersChecking.css">
   <link rel="stylesheet" href="/css/userProduct.css">
+  <link rel="stylesheet" href="/css/userUpdateProfile.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
