--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
   <link rel="stylesheet" href="/css/userDenyAccess.css">
-  <link rel="stylesheet" href="/css/userSignIn.css">
-  <link rel="stylesheet" href="/css/userSignUp.css">
+  <link rel="stylesheet" href="/css/signIn.css">
+  <link rel="stylesheet" href="/css/signUp.css">
   <link rel="stylesheet" href="/css/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
